--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,7 @@
     "examples/cactus-*",
     "examples/carbon-accounting/pkg/cactus-*"
   ],
+  "useWorkspaces": "true",
   "version": "0.5.0",
   "command": {
     "version": {
